# hubverse-infrastructure

./: .gitignore  .pre-commit-config.yaml  .ruff.toml  CONTRIBUTING.md  LICENSE  Pulumi.yaml  README.md  __main__.py  environment.yml  hubs.yaml  pyproject.toml
.github/: dependabot.yml
.github/workflows/: publish_to_s3.yaml  pulumi.yaml  pulumi_diff.yaml  pulumi_preview.yaml  pulumi_update.yaml  run-code-checks.yaml
.test-data/: howdy.txt
pulumi/: README.md  __main__.py  requirements.txt
pulumi/hubs/: hub_setup.py  hubs.yaml  iam.py  s3.py
requirements/: dev-requirements.txt  requirements.txt
src/hubverse_infrastructure/: README.md  main.py
src/hubverse_infrastructure/hubs/: hub_setup.py  hubs.yaml  iam.py  s3.py
src/hubverse_infrastructure/shared/: hubverse_transforms.py
tests/test_hubs/: test_s3.py
