[project]
name = "hubverse-infrastructure"
version = "0.1.0"
description = "Infrastructure as Code for Hubverse projects hosted on the Hubverse AWS account"
authors = [
    {name = "Becky Sweger", email = "rsweger@umass.edu"},
]
readme = "README.md"
license = {text = "MIT"}


requires-python = ">=3.11,<3.12"
dependencies = [
    "boto3",
    "cloudpathlib[s3]",
    "pulumi<4.0.0,>=3.0.0",
    "pulumi-aws<7.0.0,>=6.0.2",
    "PyYAML>=6.0.1",
]

[project.optional-dependencies]
dev = [
    "mypy",
    "pytest>=8.1",
    "ruff",
    "types-PyYAML"
]

[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[tool.ruff]
line-length = 120
lint.extend-select = ['I']

[tool.pdm]
distribution = true
